--- a/docker-compose_local_executor.yaml
+++ b/docker-compose_local_executor.yaml
@@ -69,18 +69,13 @@ x-airflow-common:
   user: "${AIRFLOW_UID:-1000}:0"
   depends_on:
     &airflow-common-depends-on
-    # redis:
-    #   condition: service_healthy
     postgres:
       condition: service_healthy
-  # command:
-  #   - c
-  #   - pip install spacy
-  #   - python3 -m spacy download en_core_web_sm
 
 services:
   postgres:
     image: postgres:13
+    container_name: airflow_postgres
     environment:
       POSTGRES_USER: airflow
       POSTGRES_PASSWORD: airflow
@@ -96,6 +91,7 @@ services:
   airflow-webserver:
     <<: *airflow-common
     command: webserver
+    container_name: airflow_webserver
     ports:
       - 8080:8080
     healthcheck:
@@ -112,6 +108,7 @@ services:
   airflow-scheduler:
     <<: *airflow-common
     command: scheduler
+    container_name: airflow_scheduler
     healthcheck:
       test: ["CMD-SHELL", 'airflow jobs check --job-type SchedulerJob --hostname "$${HOSTNAME}"']
       interval: 10s
@@ -126,6 +123,7 @@ services:
   airflow-triggerer:
     <<: *airflow-common
     command: triggerer
+    container_name: airflow_triggerer
     healthcheck:
       test: ["CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"']
       interval: 10s
@@ -140,6 +138,7 @@ services:
   airflow-init:
     <<: *airflow-common
     entrypoint: /bin/bash
+    container_name: airflow_init
     # yamllint disable rule:line-length
     command:
       - -c
